2021-09-03  Myles C. Maxfield  <mmaxfield@apple.com>

        @font-face rules accessed over file: urls to a file which does not exist are not visible to document.fonts
        https://bugs.webkit.org/show_bug.cgi?id=229639

        Reviewed by Alan Bujtas.

        Keep a local copy of these tests, because WPT tests don't run from file: URLs, but layout tests do.
        The behavior is different depending on the scheme of the main page.

        * fast/text/font-file-failed-expected.txt: Added.
        * fast/text/font-file-failed.html: Added.

2021-09-03  Myles C. Maxfield  <mmaxfield@apple.com>

        FontFaceSet.check() needs to react to style changes
        https://bugs.webkit.org/show_bug.cgi?id=229844

        Reviewed by Sam Weinig.

        This can't be a WPT test because it requires internals.invalidateFontCache().

        * fast/text/FontFaceSet-check-after-style-update-expected.txt: Added.
        * fast/text/FontFaceSet-check-after-style-update.html: Added.

2021-09-03  Myles C. Maxfield  <mmaxfield@apple.com>

        FontFaceSet.status needs to react to style changes
        https://bugs.webkit.org/show_bug.cgi?id=229839

        Reviewed by Sam Weinig.

        This is not a WPT test because it requires internals.invalidateFontCache().

        * fast/text/FontFaceSet-status-after-style-update-expected.txt: Added.
        * fast/text/FontFaceSet-status-after-style-update.html: Added.

2021-09-03  Ziran Sun  <zsun@igalia.com>

        REGRESSION(r280078): broke fast/images/exif-orientation-composited.html on windows
        https://bugs.webkit.org/show_bug.cgi?id=228325

        Reviewed by Javier Fernandez.

        * platform/win/TestExpectations:

2021-09-03  Ayumi Kojima  <ayumi_kojima@apple.com>

        [ iOS EWS ] imported/w3c/web-platform-tests/content-security-policy/worker-src/service-* tests are flaky failing.
        https://bugs.webkit.org/show_bug.cgi?id=229875

        Unreviewed test gardening.
