@@ -1,0 +1,14 @@
+<style>
+  div::-webkit-scrollbar {
+    background-color: green;
+  }
+
+  div {
+    font-family: Ahem; 
+    width: 200px;
+    height: 100px;
+    overflow: scroll;
+    color: white;
+}
+</style>
+<div>PASS if the vertical scrollbar width computes to the default scrollbar width...and some more text here.</div>
